--- a/src/main/resources/sn/socialnetwork/ui/user-view.fxml
+++ b/src/main/resources/sn/socialnetwork/ui/user-view.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sn.socialnetwork.controller.UserViewController">
    <children>
@@ -54,6 +55,11 @@
                                             </columns>
                                           </TableView>
                                           <Button fx:id="removeFriendButton" disable="true" layoutX="368.0" layoutY="14.0" mnemonicParsing="false" onAction="#removeFriendButtonClicked" prefHeight="25.0" prefWidth="113.0" text="Remove friend" AnchorPane.rightAnchor="14.0" />
+                                          <Button fx:id="loginAsFriendButton" layoutX="374.0" layoutY="46.0" mnemonicParsing="false" onAction="#loginAsFriendButtonClicked" prefHeight="25.0" prefWidth="113.0" text="Login as Friend (Dbg)" AnchorPane.rightAnchor="14.0">
+                                             <font>
+                                                <Font size="10.0" />
+                                             </font>
+                                          </Button>
                                        </children>
                                     </AnchorPane>
                               </content>
@@ -90,11 +96,6 @@
                                           <Button fx:id="discAddFriendButton" disable="true" layoutX="394.0" layoutY="332.0" mnemonicParsing="false" onAction="#discAddFriendButtonClicked" prefHeight="25.0" prefWidth="93.0" text="Add friend" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
                                        </children>
                                     </AnchorPane>
-                                </content>
-                              </Tab>
-                              <Tab text="Mame singure Ploiesti">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                 </content>
                               </Tab>
                           </tabs>
